--- a/style.css
+++ b/style.css
@@ -17,16 +17,59 @@
 }
 
 .image {
-    width: 60%;
+    display: flex;
     text-align: center;
 }
 
 .image img {
     max-width: 100%;
-    max-height: 100%;
+    max-height: 800px;
+    margin-right: 10px;
+}
+
+.longImage {
+    overflow: scroll;
+    text-align: center;
+    max-height: 800px;
 }
 
 .text {
-    width: 40%;
+    width: 35%;
     text-align: center;
+    margin-right: 10px;
+}
+
+#button {
+    margin: 0;
+    padding: 0;
+    position: fixed;
+    left: 10px;
+    top: 10px;
+    list-style-type: none;
+    z-index: 70;
+}
+
+#button li {
+    float: left;
+    margin: 0 10px 0 0;
+    font-size: 14px;
+}
+
+.menu-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #eaeaea;
+    border-radius: 5px;
+    text-decoration: none;
+    color: #333;
+    transition: background-color 0.3s ease;
+}
+
+.menu-button:hover {
+    background-color: #ccc;
+}
+
+.menu-button.active {
+    background-color: #ff0000;
+    color: #fff;
 }
